--- a/Template1/index.html
+++ b/Template1/index.html
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+
+    <title>E-Book Library</title>
   </head>
   <body>
     <div id="root"></div>
